<resources>
    <string name="app_name">Rajadingin Mobile</string>

    <string name="rjd_lowercase_name" translatable="false">rajadingin</string>
    <string name="the_all_in_one_food_shop" translatable="false">the all in one fresh &amp; frozen food shop</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Categories</string>
    <string name="title_notifications">Cart</string>
    <string name="title_profile">Profile</string>

    <!--Activity Strings-->
    <string name="str_login_sign_in">SIGN IN</string>
    <string name="str_login_username">USERNAME</string>
    <string name="str_login_password">PASSWORD</string>
    <string name="str_login_btn_signin">S I G N  I N</string>
    <string name="str_login_new_user">New user?</string>
    <string name="str_login_sign_up">Sign Up</string>
    <string name="str_register_nim">NIM</string>
    <string name="str_register_nama">Nama</string>
    <string name="str_register_password">Password</string>
    <string name="str_register_ulangi_password">Ulangi Password</string>
    <string name="str_register_sign_up">Sign Up</string>

    <string name="by_signing_in_you_agreeing_to_our">By signing in you agreeing to our</string>

    <string name="register" translatable="false">REGISTER</string>
    <string name="login_email_hint" translatable="false">Email</string>
    <string name="login_password_hint" translatable="false">Password</string>
    <string name="signup_login_hint" translatable="false">Already have an account? Sign In</string>
    <string name="login_signup_hint" translatable="false">Don\'t have an account? Sign Up</string>

    <string name="username_empty_prompt">Username is empty</string>
    <string name="pwd_empty_prompt">Password is empty</string>

    <string name="jakarta">DKI Jakarta</string>
    <string name="jabar">Jawa Barat</string>
    <string name="banten">Banten</string>
    <string name="yogyakarta">DI Yogyakarta</string>
    <string name="jateng">Jawa Tengah</string>

    <string name="jakpus">Kota Jakarta Pusat</string>
    <string name="jakbar">Kota Jakarta Barat</string>
    <string name="jaksel">Kota Jakarta Selatan</string>
    <string name="jaktim">Kota Jakarta Timur</string>
    <string name="jakut">Kota Jakarta Utara</string>

    <string name="kabBekasi">Bekasi</string>
    <string name="kotaBekasi">Kota Bekasi</string>
    <string name="kabBogor">Bogor</string>
    <string name="kotaBogor">Kota Bogor</string>

    <string name="kotaTangerang">Kota Tangerang</string>

    <string name="bantul">Bantul</string>
    <string name="gunungKidul">Gunung Kidul</string>
    <string name="kotaYogya">Kota Yogyakarta</string>
    <string name="kulonProgo">Kulon Progo</string>
    <string name="sleman">Sleman</string>

    <string name="wonogiri">Wonogiri</string>

    <string-array name="province">
        <item>@string/jakarta</item>
        <item>@string/jabar</item>
        <item>@string/banten</item>
        <item>@string/yogyakarta</item>
        <item>@string/jateng</item>
    </string-array>

    <string-array name="kabkotaJakarta">
        <item>@string/jakpus</item>
        <item>@string/jakbar</item>
        <item>@string/jaksel</item>
        <item>@string/jaktim</item>
        <item>@string/jakut</item>
    </string-array>

    <string-array name="kabkotaJabar">
        <item>@string/kabBekasi</item>
        <item>@string/kotaBekasi</item>
        <item>@string/kabBogor</item>
        <item>@string/kotaBogor</item>
    </string-array>

    <string-array name="kabkotaBanten">
        <item>@string/kotaTangerang</item>
    </string-array>

    <string-array name="kabkotaYogya">
        <item>@string/bantul</item>
        <item>@string/gunungKidul</item>
        <item>@string/kotaYogya</item>
        <item>@string/kulonProgo</item>
        <item>@string/sleman</item>
    </string-array>

    <string-array name="kabkotaJateng">
        <item>@string/wonogiri</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>

</resources>